--- a/cloud-common-content-dev.properties
+++ b/cloud-common-content-dev.properties
@@ -39,3 +39,7 @@ spring.rabbitmq.password=123456
 spring.rabbitmq.port=5672
 spring.rabbitmq.virtual-host=/
 
+# 测试配置
+testConfig=1
+testConfig=1
+testConfig=
