测试修改配置

--- a/cloud-common-content-dev.properties
+++ b/cloud-common-content-dev.properties
@@ -1,12 +1,12 @@
 spring.application.name=cloud-common-content
 server.port=9020
-eureka.client.service-url.defaultZone=http://homeUbuntu:8761/eureka
+eureka.client.service-url.defaultZone=http://cloudubuntu:8761/eureka
 
 ################# database config begin #################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://homeUbuntu:3306/springcloudbzsc?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://cloudUbuntu:3306/springcloudbzsc?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=cloud_Mysql1
 pagehelper.helper-dialect=mysql
 ################# database config end #################
 
@@ -33,7 +33,7 @@ spring.redis.timeout=1000
 frontend.AD=108
 
 # 配置rabbitMQ
-spring.rabbitmq.addresses=homeUbuntu
+spring.rabbitmq.addresses=cloudUbuntu
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=123456
 spring.rabbitmq.port=5672
