启用feign中的服务降级功能

--- a/cloud-common-item-dev.properties
+++ b/cloud-common-item-dev.properties
@@ -29,9 +29,5 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=1000
 ################# redis config end #################
 
-# 配置rabbitMQ
-spring.rabbitmq.addresses=homeUbuntu
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=123456
-spring.rabbitmq.port=5672
-spring.rabbitmq.virtual-host=/
+# 启用feign中的服务降级功能
+feign.hystrix.enabled=true
